--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,4 +26,28 @@
         android:layout_marginLeft="42dp"
         android:layout_marginStart="42dp"
         android:id="@+id/btnZodiac" />
+
+    <DatePicker
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="83dp"
+        android:id="@+id/datePicker" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="date"
+        android:ems="10"
+        android:id="@+id/yearText"
+        android:layout_above="@+id/btnZodiac"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="57dp"
+        android:textSize="18sp"
+        android:contentDescription="Enter Your Birth Year"
+        tools:text="Enter Your Birth Year" />
 </RelativeLayout>
